# course_work_for_pd_18

./: README.md  main.py  pyproject.toml  settings.py
app/: exceptions.py
app/fixtures/: data.json
app/models/: database.py  operation.py  operation_amount.py
tests/: conftest.py  test_data.py
